[project]
name = "randomloraloader"
description = "Randomly select and apply LoRAs with keyword filtering, preview images, and multiple folder support for ComfyUI"
version = "1.1.0"
license = {file = "LICENSE"}

classifiers = [
    "Operating System :: OS Independent",
    "Environment :: GPU :: NVIDIA CUDA",
    "Environment :: GPU :: AMD ROCm",
]

[project.urls]
Repository = "https://github.com/shin131002/RandomLoRALoader"

[tool.comfy]
PublisherId = ""
DisplayName = "RandomLoRALoader"
Icon = ""