[project]
name = "randomloraloader"
description = "Randomly select and apply LoRAs with keyword filtering, LoRA Block Weight support, preview images, and multiple folder support for ComfyUI"
version = "1.2.0"
license = {file = "LICENSE"}

classifiers = [
    "Operating System :: OS Independent",
    "Environment :: GPU :: NVIDIA CUDA",
    "Environment :: GPU :: AMD ROCm",
]

[project.urls]
Repository = "https://github.com/shin131002/RandomLoRALoader"

[tool.comfy]
PublisherId = "konohana"
DisplayName = "RandomLoRALoader"
Icon = ""
